@@ -10,3 +10,9 @@ mkinstalldirs
 .deps
 ABOUT-NLS
 freedesktop.org.xml.in.h
+config.guess
+config.sub
+intltool-*
+ltmain.sh
+stamp-h1
+update-mime-database
