@@ -29,12 +29,11 @@ uninstall-hook:
 check:
 	xmllint --noout --valid $(srcdir)/freedesktop.org.xml
 
-SUBDIRS = m4
 
-ACLOCAL_AMFLAGS = -I m4
-
-all-local:
-	@if locale | grep -q UTF; then echo "*** intltool doesn't like UTF-8 locales.  Try rerunning with eg: LANG=en_US"; /bin/rm -f freedesktop.org.xml; exit 1; fi
-
-dist-hook:
-	@if locale | grep -q UTF; then echo "*** intltool doesn't like UTF-8 locales.  Try rerunning with eg: LANG=en_US"; /bin/rm -f freedesktop.org.xml; exit 1; fi
+## I'd prefer to kep these tests in, but it breaks on too many machines.
+##
+##all-local:
+##	@if locale | grep -q UTF; then echo "*** intltool doesn't like UTF-8 locales.  Try rerunning with eg: LANG=en_US"; /bin/rm -f freedesktop.org.xml; exit 1; fi
+##
+##dist-hook:
+##	@if locale | grep -q UTF; then echo "*** intltool doesn't like UTF-8 locales.  Try rerunning with eg: LANG=en_US"; /bin/rm -f freedesktop.org.xml; exit 1; fi
